--- a/index.html
+++ b/index.html
@@ -5,101 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News Sentiment Analysis</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        header {
-            width: 100%;
-            padding: 20px;
-            background-color: #333;
-            color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        header h1 {
-            margin: 0;
-        }
-
-        nav {
-            display: flex;
-            gap: 15px;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 15px;
-            background-color: #555;
-            border-radius: 5px;
-        }
-
-        main {
-            width: 80%;
-            margin: 20px;
-            padding: 20px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            color: #333;
-        }
-
-        .articles {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .article {
-            background-color: #f9f9f9;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .article a {
-            text-decoration: none;
-            color: #333;
-            font-weight: bold;
-        }
-
-        .votes {
-            margin-top: 10px;
-            font-size: 14px;
-            color: #666;
-        }
-
-        .vote-buttons form {
-            display: inline-block;
-            margin-right: 10px;
-        }
-
-        .sentiment {
-            color: #007BFF;
-        }
-
-        .graph {
-            margin-top: 30px;
-        }
-
-        footer {
-            margin-top: 50px;
-            text-align: center;
-            padding: 20px;
-            background-color: #333;
-            color: white;
-        }
+        /* (same CSS as before) */
     </style>
 </head>
 <body>
@@ -107,53 +13,72 @@
 <header>
     <h1>News Sentiment Analysis</h1>
     <nav>
-        <a href="{{ url_for('index') }}">Bitcoin</a>
-        <a href="{{ url_for('crypto') }}">Crypto</a>
-        <a href="{{ url_for('stocks') }}">Stocks</a>
-        <a href="{{ url_for('technology') }}">Technology</a>
+        <a href="index.html">Bitcoin</a>
+        <a href="crypto.html">Crypto</a>
+        <a href="stocks.html">Stocks</a>
+        <a href="technology.html">Technology</a>
     </nav>
 </header>
 
 <main>
     <div class="graph">
         <h2>Sentiment Breakdown</h2>
-        <img src="data:image/png;base64,{{ graph }}" alt="Sentiment Graph">
+        <img src="sentiment_graph.png" alt="Sentiment Graph">
     </div>
 
-    <div class="articles">
+    <div class="articles" id="articles-container">
         <h2>Articles</h2>
-        {% for idx, article in headlines %}
-        <div class="article">
-            <a href="{{ article['url'] }}" target="_blank">{{ article['title'] }}</a>
-            <p><strong>Published at:</strong> {{ article['published_at'] }}</p>
-            <p><strong>Sentiment:</strong> <span class="sentiment">{{ article['sentiment'] }}</span></p>
-            
-            <div class="votes">
-                <strong>Votes:</strong> 
-                Bullish: {{ popular_articles.get(idx, {}).get('bullish', 0) }} |
-                Bearish: {{ popular_articles.get(idx, {}).get('bearish', 0) }} |
-                Neutral: {{ popular_articles.get(idx, {}).get('neutral', 0) }}
-            </div>
-
-            <div class="vote-buttons">
-                <form action="{{ url_for('vote', article_id=idx, sentiment='bullish') }}" method="POST">
-                    <button type="submit">Bullish</button>
-                </form>
-                <form action="{{ url_for('vote', article_id=idx, sentiment='bearish') }}" method="POST">
-                    <button type="submit">Bearish</button>
-                </form>
-                <form action="{{ url_for('vote', article_id=idx, sentiment='neutral') }}" method="POST">
-                    <button type="submit">Neutral</button>
-                </form>
-            </div>
-        </div>
-        {% endfor %}
+        <!-- Articles will be injected here by JS -->
     </div>
 </main>
 
 <footer>
     <p>Powered by News API</p>
 </footer>
+
+<script>
+    // Example static articles data (replace with actual data or fetch from an API)
+    const articles = [
+        {
+            title: "Bitcoin reaches new highs",
+            url: "https://example.com/bitcoin-news",
+            published_at: "2025-04-10",
+            sentiment: "Bullish",
+            votes: { bullish: 12, bearish: 2, neutral: 3 }
+        },
+        {
+            title: "Crypto regulation in the US",
+            url: "https://example.com/crypto-regulation",
+            published_at: "2025-04-09",
+            sentiment: "Neutral",
+            votes: { bullish: 4, bearish: 5, neutral: 8 }
+        }
+    ];
+
+    const container = document.getElementById('articles-container');
+
+    articles.forEach((article, idx) => {
+        const div = document.createElement('div');
+        div.className = 'article';
+        div.innerHTML = `
+            <a href="${article.url}" target="_blank">${article.title}</a>
+            <p><strong>Published at:</strong> ${article.published_at}</p>
+            <p><strong>Sentiment:</strong> <span class="sentiment">${article.sentiment}</span></p>
+            <div class="votes">
+                <strong>Votes:</strong> 
+                Bullish: ${article.votes.bullish} |
+                Bearish: ${article.votes.bearish} |
+                Neutral: ${article.votes.neutral}
+            </div>
+            <div class="vote-buttons">
+                <button onclick="alert('You voted Bullish for article ${idx + 1}')">Bullish</button>
+                <button onclick="alert('You voted Bearish for article ${idx + 1}')">Bearish</button>
+                <button onclick="alert('You voted Neutral for article ${idx + 1}')">Neutral</button>
+            </div>
+        `;
+        container.appendChild(div);
+    });
+</script>
 
 </body>
 </html>
