--- a/index.html
+++ b/index.html
@@ -80,12 +80,17 @@
             color: #666;
         }
 
-        .vote-buttons button {
+        .vote-buttons form {
+            display: inline-block;
             margin-right: 10px;
         }
 
         .sentiment {
             color: #007BFF;
+        }
+
+        .graph {
+            margin-top: 30px;
         }
 
         footer {
@@ -102,75 +107,53 @@
 <header>
     <h1>News Sentiment Analysis</h1>
     <nav>
-        <a href="index.html">Bitcoin</a>
-        <a href="crypto.html">Crypto</a>
-        <a href="stocks.html">Stocks</a>
-        <a href="technology.html">Technology</a>
+        <a href="{{ url_for('index') }}">Bitcoin</a>
+        <a href="{{ url_for('crypto') }}">Crypto</a>
+        <a href="{{ url_for('stocks') }}">Stocks</a>
+        <a href="{{ url_for('technology') }}">Technology</a>
     </nav>
 </header>
 
 <main>
-    <div class="articles" id="articles-container">
+    <div class="graph">
+        <h2>Sentiment Breakdown</h2>
+        <img src="data:image/png;base64,{{ graph }}" alt="Sentiment Graph">
+    </div>
+
+    <div class="articles">
         <h2>Articles</h2>
-        <!-- Articles will be injected here -->
+        {% for idx, article in headlines %}
+        <div class="article">
+            <a href="{{ article['url'] }}" target="_blank">{{ article['title'] }}</a>
+            <p><strong>Published at:</strong> {{ article['published_at'] }}</p>
+            <p><strong>Sentiment:</strong> <span class="sentiment">{{ article['sentiment'] }}</span></p>
+            
+            <div class="votes">
+                <strong>Votes:</strong> 
+                Bullish: {{ popular_articles.get(idx, {}).get('bullish', 0) }} |
+                Bearish: {{ popular_articles.get(idx, {}).get('bearish', 0) }} |
+                Neutral: {{ popular_articles.get(idx, {}).get('neutral', 0) }}
+            </div>
+
+            <div class="vote-buttons">
+                <form action="{{ url_for('vote', article_id=idx, sentiment='bullish') }}" method="POST">
+                    <button type="submit">Bullish</button>
+                </form>
+                <form action="{{ url_for('vote', article_id=idx, sentiment='bearish') }}" method="POST">
+                    <button type="submit">Bearish</button>
+                </form>
+                <form action="{{ url_for('vote', article_id=idx, sentiment='neutral') }}" method="POST">
+                    <button type="submit">Neutral</button>
+                </form>
+            </div>
+        </div>
+        {% endfor %}
     </div>
 </main>
 
 <footer>
     <p>Powered by News API</p>
 </footer>
-
-<script>
-    const articles = [
-        {
-            title: "Bitcoin hits new all-time high",
-            url: "https://example.com/bitcoin-news",
-            published_at: "2025-04-10",
-            sentiment: "Bullish",
-            votes: { bullish: 5, bearish: 1, neutral: 2 }
-        },
-        {
-            title: "Crypto market sees increased regulation",
-            url: "https://example.com/crypto-update",
-            published_at: "2025-04-09",
-            sentiment: "Neutral",
-            votes: { bullish: 3, bearish: 2, neutral: 6 }
-        }
-    ];
-
-    const container = document.getElementById('articles-container');
-
-    articles.forEach((article, idx) => {
-        const articleDiv = document.createElement('div');
-        articleDiv.className = 'article';
-
-        articleDiv.innerHTML = `
-            <a href="${article.url}" target="_blank">${article.title}</a>
-            <p><strong>Published at:</strong> ${article.published_at}</p>
-            <p><strong>Sentiment:</strong> <span class="sentiment">${article.sentiment}</span></p>
-            <div class="votes">
-                <strong>Votes:</strong>
-                Bullish: <span id="bullish-${idx}">${article.votes.bullish}</span> |
-                Bearish: <span id="bearish-${idx}">${article.votes.bearish}</span> |
-                Neutral: <span id="neutral-${idx}">${article.votes.neutral}</span>
-            </div>
-            <div class="vote-buttons">
-                <button onclick="vote(${idx}, 'bullish')">Bullish</button>
-                <button onclick="vote(${idx}, 'bearish')">Bearish</button>
-                <button onclick="vote(${idx}, 'neutral')">Neutral</button>
-            </div>
-        `;
-
-        container.appendChild(articleDiv);
-    });
-
-    function vote(index, type) {
-        const span = document.getElementById(`${type}-${index}`);
-        let count = parseInt(span.textContent);
-        span.textContent = count + 1;
-        alert(`You voted ${type.charAt(0).toUpperCase() + type.slice(1)} for article ${index + 1}`);
-    }
-</script>
 
 </body>
 </html>
